--- a/argocd/applications/wikijs/persistent-volumes.yaml
+++ b/argocd/applications/wikijs/persistent-volumes.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: "postgres-data"
+  name: postgres-data
 spec:
-  storageClassName: "nfs-client"
+  storageClassName: nfs-client
   accessModes:
     - ReadWriteMany
   resources:
     requests:
-      storage: "10Mi"
+      storage: 10Mi
 
 ---
 
@@ -23,3 +23,6 @@ spec:
     requests:
       storage: 10Mi
   storageClassName: longhorn
+  dataSource:
+    kind: PersistentVolumeClaim
+    name: postgres-data
