--- a/argocd/applications/wikijs/persistent-volumes.yaml
+++ b/argocd/applications/wikijs/persistent-volumes.yaml
@@ -7,8 +7,8 @@ spec:
     - ReadWriteMany
   resources:
     requests:
-      storage: 10Mi
-  storageClassName: nfs-client
+      storage: 100Mi
+  storageClassName: longhorn
 
 ---
 
