--- a/argocd/applications/wikijs/persistent-volumes.yaml
+++ b/argocd/applications/wikijs/persistent-volumes.yaml
@@ -1,14 +1,14 @@
-#apiVersion: v1
-#kind: PersistentVolumeClaim
-#metadata:
-#  name: postgres-data
-#spec:
-#  accessModes:
-#    - ReadWriteMany
-#  resources:
-#    requests:
-#      storage: 100Mi
-#  storageClassName: longhorn
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: postgres-data
+spec:
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 100Mi
+  storageClassName: longhorn
 
 ---
 
