feat/wikijs-longhorn (#57)
* add longhorn pv

* add longhorn volume mount

* try cloning

* nah

* try not mounting longhorn for now

* undo

* increase longhorn volume to 100Mi

* scale down pods

* post-copy: mount longhorn volume, scale pods up

* create new longhorn pvc, scale down pods

* temp comments

* revert

* scale up

--- a/argocd/applications/wikijs/persistent-volumes.yaml
+++ b/argocd/applications/wikijs/persistent-volumes.yaml
@@ -1,12 +1,25 @@
-kind: PersistentVolumeClaim
 apiVersion: v1
+kind: PersistentVolumeClaim
 metadata:
-  name: "postgres-data"
+  name: postgres-data
 spec:
-  storageClassName: "nfs-client"
   accessModes:
     - ReadWriteMany
   resources:
     requests:
-      storage: "10Mi"
+      storage: 100Mi
+  storageClassName: longhorn
 
+---
+
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: postgres-data-longhorn
+spec:
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 100Mi
+  storageClassName: longhorn
