--- a/argocd/applications/continuwuity/app.yaml
+++ b/argocd/applications/continuwuity/app.yaml
@@ -67,8 +67,8 @@ spec:
             - name: CONDUWUIT_ALLOW_REGISTRATION
               value: true
             # CoreDNS Settings
-            - name: CONDUWUIT_QUERY_OVER_TCP_ONLY
-              value: true
+            #- name: CONDUWUIT_QUERY_OVER_TCP_ONLY
+            #value: true
             - name: CONDUWUIT_IP_LOOKUP_STRATEGY
               value: "1"
             # JJ's personal settings
