--- a/argocd/applications/continuwuity/app.yaml
+++ b/argocd/applications/continuwuity/app.yaml
@@ -126,7 +126,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  labels:
+    app: "continuwuity"
+    service: "continuwuity-app"
   name: "continuwuity-app"
+  namespace: "continuwuity"
 
 spec:
   ports:
@@ -135,16 +139,19 @@ spec:
       targetPort: "app"
 
   selector:
-    app: "continuwuity-app"
+    app: "continuwuity"
+    service: "continuwuity-app"
 
 ---
 
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  annotations:
+  labels:
+    app: "continuwuity"
+    service: "continuwuity-app"
   name: "continuwuity-app-web"
-  namespace: "continuwuity-app"
+  namespace: "continuwuity"
 
 spec:
   entryPoints:
@@ -162,9 +169,11 @@ spec:
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  annotations:
+  labels:
+    app: "continuwuity"
+    service: "continuwuity-app"
   name: "continuwuity-app-websecure"
-  namespace: "continuwuity-app"
+  namespace: "continuwuity"
 
 spec:
   entryPoints:
