--- a/argocd/applications/continuwuity/app.yaml
+++ b/argocd/applications/continuwuity/app.yaml
@@ -72,6 +72,8 @@ spec:
               value: "true"
             - name: CONDUWUIT_SUSPEND_ON_REGISTER
               value: "true"
+            - name: CONDUWUIT_AUTO_JOIN_ROOMS
+              value: "#new-user-landing-page:matrix.tlake.io"
             # CoreDNS Settings
             - name: CONDUWUIT_QUERY_OVER_TCP_ONLY
               value: "true"
