add minecraft tcp and udp entrypoints

--- a/argocd/applications/traefik/traefik.yml
+++ b/argocd/applications/traefik/traefik.yml
@@ -28,7 +28,9 @@ entryPoints:
           to: "websecure"
   websecure:
     address: ":443"
-  minecraft:
+  minecraft-tcp:
+    address: ":25565/tcp"
+  minecraft-udp:
     address: ":25565/udp"
     udp:
       timeout: "10s"
