try nativeLB, host match

--- a/argocd/applications/papermc/app.yaml
+++ b/argocd/applications/papermc/app.yaml
@@ -99,3 +99,6 @@ spec:
     - services:
         - name: "papermc"
           port: "mc-traffic"
+          nativeLB: true
+      match: Host(`minecraft.tlake.io`)
+      kind: Rule
