--- a/argocd/applications/papermc/app.yaml
+++ b/argocd/applications/papermc/app.yaml
@@ -56,9 +56,14 @@ metadata:
 
 spec:
   ports:
-    - name: "mc-traffic"
+    - name: "tcp-traffic"
       port: 25565
-      targetPort: "app"
+      protocol: "TCP"
+      targetPort: 25565
+    - name: "udp-traffic"
+      port: 25565
+      protocol: "UDP"
+      targetPort: 25565
 
   selector:
     app: "papermc"
@@ -68,7 +73,6 @@ spec:
 apiVersion: traefik.io/v1alpha1
 kind: IngressRouteTCP
 metadata:
-  annotations:
   name: "papermc-tcp"
   namespace: "papermc"
 
@@ -80,14 +84,13 @@ spec:
     - match: HostSNI(`*`)
       services:
         - name: "papermc"
-          port: "mc-traffic"
+          port: "tcp-traffic"
 
 ---
 
 apiVersion: traefik.io/v1alpha1
 kind: IngressRouteUDP
 metadata:
-  annotations:
   name: "papermc-udp"
   namespace: "papermc"
 
@@ -98,5 +101,4 @@ spec:
   routes:
     - services:
         - name: "papermc"
-          port: "mc-traffic"
-          nativeLB: true
+          port: "udp-traffic"
